# test_cache

./: .gitignore  CMakeLists.txt  CMakePresets.json
.github/workflows/: ci.yml  ci.yml.old
cmake/: test_cacheConfig.cmake.in
include/: CMakeLists.txt
include/mylib/: math.h
tests/: CMakeLists.txt  math_tests.cpp
